--- a/.github/ISSUE_TEMPLATE/_bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/_bug_report.yaml
@@ -38,7 +38,9 @@ body:
       multiple: true
       options:
         - Android
+        - iOS
         - Linux
+        - macOS
         - Windows
     validations:
       required: true
