--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   file_picker: ^9.0.2
   any_link_preview: ^3.0.3
   simplytranslate: ^2.2.2
+  visibility_detector: ^0.4.0+2
 
 dev_dependencies:
   flutter_lints: ^5.0.0
