Support iOS and macOS platforms (#168)
* Add iOS and macOS files from flutter create command

* Update iOS and macOS files with app information and remove RunnerTests

* Optimize .png files

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,5 +75,8 @@ flutter_launcher_icons:
   adaptive_icon_foreground: 'assets/icons/logo-foreground.png'
   adaptive_icon_background: '#294062'
   adaptive_icon_monochrome: 'assets/icons/logo-monochrome.png'
+  ios: true
+  macos:
+    generate: true
   windows:
     generate: true
