Revert "Temp remove AppImage due to failing build"
This reverts commit 4a838d980e672c834fb4306529ba15566369c627.

--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -153,7 +153,7 @@ jobs:
         working-directory: ${{ matrix.build_path }}
 
       - name: Build AppImage for linux
-        if: false && matrix.target_os == 'linux'
+        if: matrix.target_os == 'linux'
         run: |
           PKG_URL_PREFIX="https://github.com/pkgforge-dev/llvm-libs-debloated/releases/download/continuous"
 
