Fix pull_request_tests.yml to use specified Flutter version

--- a/.github/workflows/pull_request_tests.yml
+++ b/.github/workflows/pull_request_tests.yml
@@ -6,7 +6,21 @@ permissions:
 on: pull_request
 
 jobs:
+  prepare-tests:
+    name: Prepare tests
+    runs-on: ubuntu-latest
+    outputs:
+      flutter_version: ${{ steps.build_info.outputs.FLUTTER_VERSION }}
+
+    steps:
+      - name: Gather build info
+        id: build_info
+        run: |
+          echo "FLUTTER_VERSION=$(sed -nE 's/  flutter: ([0-9.]+)/\1/p' pubspec.yaml)" >> "$GITHUB_OUTPUT"
+
+
   test-android-build:
+    needs: prepare-tests
     name: Test android build
     runs-on: ubuntu-latest
     steps:
@@ -19,6 +33,8 @@ jobs:
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
+        with:
+          flutter-version: ${{ needs.prepare-release.outputs.flutter_version }}
 
       - name: Checkout code
         uses: actions/checkout@v4
@@ -27,7 +43,9 @@ jobs:
         run: |
           dart run build_runner build
           flutter build -v apk --split-per-abi
+
   test-linux-build:
+    needs: prepare-tests
     name: Test linux build
     runs-on: ubuntu-latest
     steps:
@@ -38,6 +56,8 @@ jobs:
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
+        with:
+          flutter-version: ${{ needs.prepare-release.outputs.flutter_version }}
 
       - name: Checkout code
         uses: actions/checkout@v3
