Fix GH action prepare steps to checkout code

--- a/.github/workflows/pull_request_tests.yml
+++ b/.github/workflows/pull_request_tests.yml
@@ -13,11 +13,13 @@ jobs:
       flutter_version: ${{ steps.build_info.outputs.FLUTTER_VERSION }}
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Gather build info
         id: build_info
         run: |
           echo "FLUTTER_VERSION=$(sed -nE 's/  flutter: ([0-9.]+)/\1/p' pubspec.yaml)" >> "$GITHUB_OUTPUT"
-
 
   test-android-build:
     needs: prepare-tests
