--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -16,11 +16,15 @@ jobs:
       flutter_version: ${{ steps.build_info.outputs.FLUTTER_VERSION }}
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Gather build info
         id: build_info
         run: |
           echo "INTERSTELLAR_VERSION=$(sed -nr 's/version: ([0-9.]+)\+[0-9]+/\1/p' pubspec.yaml)" >> "$GITHUB_OUTPUT"
           echo "FLUTTER_VERSION=$(sed -nE 's/  flutter: ([0-9.]+)/\1/p' pubspec.yaml)" >> "$GITHUB_OUTPUT"
+
       - name: Draft v${{ steps.build_info.outputs.INTERSTELLAR_VERSION }} release
         id: draft_release
         uses: softprops/action-gh-release@v2
