--- a/.github/workflows/pull_request_tests.yml
+++ b/.github/workflows/pull_request_tests.yml
@@ -6,23 +6,7 @@ permissions:
 on: pull_request
 
 jobs:
-  prepare-tests:
-    name: Prepare tests
-    runs-on: ubuntu-latest
-    outputs:
-      flutter_version: ${{ steps.build_info.outputs.FLUTTER_VERSION }}
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Gather build info
-        id: build_info
-        run: |
-          echo "FLUTTER_VERSION=$(sed -nE 's/  flutter: ([0-9.]+)/\1/p' pubspec.yaml)" >> "$GITHUB_OUTPUT"
-
   test-android-build:
-    needs: prepare-tests
     name: Test android build
     runs-on: ubuntu-latest
     steps:
@@ -33,13 +17,13 @@ jobs:
           java-version: '21'
           distribution: temurin
 
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: ${{ needs.prepare-release.outputs.flutter_version }}
-
-      - name: Checkout code
-        uses: actions/checkout@v4
+          flutter-version-file: pubspec.yaml
 
       - name: Build Flutter app
         run: |
@@ -47,7 +31,6 @@ jobs:
           flutter build -v apk --split-per-abi
 
   test-linux-build:
-    needs: prepare-tests
     name: Test linux build
     runs-on: ubuntu-latest
     steps:
@@ -56,13 +39,13 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev libx11-dev pkg-config cmake ninja-build libblkid-dev libmpv-dev mpv
 
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: ${{ needs.prepare-release.outputs.flutter_version }}
-
-      - name: Checkout code
-        uses: actions/checkout@v3
+          flutter-version-file: pubspec.yaml
 
       - name: Build Flutter app
         run: |
