--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -13,6 +13,7 @@ jobs:
     outputs:
       upload_url: ${{ steps.draft_release.outputs.upload_url }}
       interstellar_version: ${{ steps.build_info.outputs.INTERSTELLAR_VERSION }}
+      flutter_version: ${{ steps.build_info.outputs.FLUTTER_VERSION }}
 
     steps:
       - name: Checkout code
@@ -21,7 +22,8 @@ jobs:
       - name: Gather build info
         id: build_info
         run: |
-          echo "INTERSTELLAR_VERSION=$(sed -nr 's/version: ([0-9.]+)\+[0-9]+/\1/p' pubspec.yaml)" >> "$GITHUB_OUTPUT"
+          echo "INTERSTELLAR_VERSION=$(yq eval -r '.version' ./pubspec.yaml | cut -d+ -f1)" >> "$GITHUB_OUTPUT"
+          echo "FLUTTER_VERSION=$(yq -r '.environment.flutter' ./pubspec.yaml)" >> "$GITHUB_OUTPUT"
 
       - name: Draft v${{ steps.build_info.outputs.INTERSTELLAR_VERSION }} release
         id: draft_release
@@ -82,7 +84,7 @@ jobs:
           pacman -Syuq --needed --noconfirm --noprogressbar \
             ninja gtk3 xz gcc mpv wget jq git which base-devel \
             file zsync patchelf binutils strace mesa llvm \
-            xorg-server-xvfb cmake clang unzip yq
+            xorg-server-xvfb cmake clang unzip
 
       - name: Install windows dependencies
         if: matrix.target_os == 'windows'
@@ -92,11 +94,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Flutter
+        if: matrix.target_os != 'linux'
         uses: subosito/flutter-action@v2
         with:
-          # Use master until Flutter action is fixed for arm (https://github.com/subosito/flutter-action/issues/345)
-          channel: ${{ matrix.target == 'linux-aarch64' && 'master' || 'stable' }}
-          flutter-version-file: pubspec.yaml
+          flutter-version: ${{ needs.prepare-release.outputs.flutter_version }}
 
       # Needed to fix "detected dubious ownership in repository" error caused by Linux containerization
       - name: git-config add safe directory
