Disable AppImages again

--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -150,7 +150,8 @@ jobs:
         working-directory: ${{ matrix.build_path }}
 
       - name: Build AppImage for linux
-        if: matrix.target_os == 'linux'
+        if: false
+        #if: matrix.target_os == 'linux'
         run: |
           PKG_URL_PREFIX="https://github.com/pkgforge-dev/llvm-libs-debloated/releases/download/continuous"
 
