--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   extended_image: ^10.0.1
   drift: ^2.28.2
   drift_flutter: ^0.2.7
+  drift_db_viewer: ^2.1.0
 
 dev_dependencies:
   flutter_lints: ^6.0.0
