--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   drift: ^2.28.2
   drift_flutter: ^0.2.7
   drift_db_viewer: ^2.1.0
+  sqlite3: ^2.9.4
 
 dev_dependencies:
   flutter_lints: ^6.0.0
