--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,10 @@ dependencies:
   visibility_detector: ^0.4.0+2
   logger: ^2.6.1
   extended_image: ^10.0.1
+  drift: ^2.28.2
+  drift_flutter: ^0.2.7
+  drift_db_viewer: ^2.1.0
+  sqlite3: ^2.9.4
 
 dev_dependencies:
   flutter_lints: ^6.0.0
@@ -61,6 +65,7 @@ dev_dependencies:
   build_runner: ^2.8.0
   freezed: ^3.2.3
   json_serializable: ^6.11.1
+  drift_dev: ^2.28.3
 
 flutter:
   uses-material-design: true
