--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   drift_flutter: ^0.2.7
   drift_db_viewer: ^2.1.0
   sqlite3: ^2.9.4
+  collection: ^1.19.1
 
 dev_dependencies:
   flutter_lints: ^6.0.0
