--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   drift_db_viewer: ^2.1.0
   sqlite3: ^2.9.4
   collection: ^1.19.1
+  flutter_colorpicker: ^1.1.0
 
 dev_dependencies:
   flutter_lints: ^6.0.0
