--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   sqlite3: ^2.9.4
   collection: ^1.19.1
   flutter_colorpicker: ^1.1.0
+  auto_route: ^11.1.0
 
 dev_dependencies:
   flutter_lints: ^6.0.0
@@ -68,6 +69,7 @@ dev_dependencies:
   freezed: ^3.2.3
   json_serializable: ^6.11.1
   drift_dev: ^2.28.3
+  auto_route_generator: ^10.4.0
 
 # Needed for 16kb page, remove once this pr (https://github.com/google/webcrypto.dart/pull/238) is merged and the next version is released.
 dependency_overrides:
