--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   collection: ^1.19.1
   flutter_colorpicker: ^1.1.0
   auto_route: ^11.1.0
+  flutter_web_auth_2: ^5.0.1
 
 dev_dependencies:
   flutter_lints: ^6.0.0
