--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,12 +62,12 @@ dependencies:
   flutter_colorpicker: ^1.1.0
 
 dev_dependencies:
-  flutter_lints: ^6.0.0
   flutter_launcher_icons: ^0.14.4
   build_runner: ^2.8.0
   freezed: ^3.2.3
   json_serializable: ^6.11.1
   drift_dev: ^2.28.3
+  very_good_analysis: ^10.0.0
 
 # Needed for 16kb page, remove once this pr (https://github.com/google/webcrypto.dart/pull/238) is merged and the next version is released.
 dependency_overrides:
