--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   flutter_colorpicker: ^1.1.0
   auto_route: ^11.1.0
   flutter_web_auth_2: ^5.0.1
+  desktop_webview_window: ^0.2.3
 
 dev_dependencies:
   flutter_lints: ^6.0.0
