Fix l10n files not being generated before dart analysis

--- a/.github/workflows/pull_request_tests.yml
+++ b/.github/workflows/pull_request_tests.yml
@@ -15,8 +15,10 @@ jobs:
         with:
           flutter-version-file: pubspec.yaml
 
-      - name: Run build_runner
-        run: dart run build_runner build
+      - name: Generate source files
+        run: |
+          flutter gen-l10n
+          dart run build_runner build
 
       - name: Analyze Dart
         uses: zgosalvez/github-actions-analyze-dart@v3
