--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ version: 0.11.2+24
 
 environment:
   sdk: '>=3.9.0 <4.0.0'
-  flutter: 3.38.9
+  flutter: 3.41.1
 
 dependencies:
   flutter:
@@ -15,59 +15,59 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_markdown: ^0.7.7
-  http: ^1.5.0
+  http: ^1.6.0
   http_parser: ^4.1.2
   path: ^1.9.1
   mime: ^2.0.0
   infinite_scroll_pagination: ^5.1.1
   intl: any
-  media_kit: ^1.2.3
+  media_kit: ^1.2.6
   media_kit_video: ^2.0.1
   media_kit_libs_video: ^1.0.7
-  oauth2: ^2.0.3
+  oauth2: ^2.0.5
   provider: ^6.1.5
   url_launcher: ^6.3.2
-  webview_flutter: ^4.13.0
+  webview_flutter: ^4.13.1
   youtube_explode_dart: ^3.0.5
   freezed_annotation: ^3.1.0
-  image_picker: ^1.2.0
+  image_picker: ^1.2.1
   dynamic_color: ^1.8.1
   markdown: ^7.3.0
   expandable: ^5.0.1
   flutter_blurhash: ^0.9.1
-  unifiedpush: ^6.0.2
-  webpush_encryption: 1.0.0-rc1
-  flutter_local_notifications: ^19.4.2
-  flex_color_scheme: ^8.3.0
-  share_plus: ^12.0.0
+  unifiedpush: ^6.2.0
+  webpush_encryption: 1.0.1
+  flutter_local_notifications: ^20.1.0
+  flex_color_scheme: ^8.4.0
+  share_plus: ^12.0.1
   path_provider: ^2.1.5
   window_manager: ^0.5.1
-  material_symbols_icons: ^4.2873.0
-  json_annotation: ^4.9.0
-  sembast: ^3.8.5
-  package_info_plus: ^8.3.0
+  material_symbols_icons: ^4.2906.0
+  json_annotation: ^4.10.0
+  sembast: ^3.8.6
+  package_info_plus: ^9.0.0
   flutter_localized_locales: ^2.0.5
-  crypto: ^3.0.6
-  file_picker: ^10.3.3
+  crypto: ^3.0.7
+  file_picker: ^10.3.10
   any_link_preview: ^3.0.3
   simplytranslate: ^2.2.2
   visibility_detector: ^0.4.0+2
-  logger: ^2.6.1
+  logger: ^2.6.2
   extended_image: ^10.0.1
-  drift: ^2.28.2
-  drift_flutter: ^0.2.7
+  drift: ^2.31.0
+  drift_flutter: ^0.2.8
   drift_db_viewer: ^2.1.0
   sqlite3: ^2.9.4
   collection: ^1.19.1
   flutter_colorpicker: ^1.1.0
   flutter_launcher_icons: ^0.14.4
-  build_runner: ^2.10.5
-  freezed: ^3.2.4
-  json_serializable: ^6.11.1
-  drift_dev: ^2.28.3
+  build_runner: ^2.11.1
+  freezed: ^3.2.5
+  json_serializable: ^6.12.0
+  drift_dev: ^2.31.0
   build: ^4.0.4
-  very_good_analysis: ^10.0.0
-  auto_route_generator: ^10.4.0
+  very_good_analysis: ^10.1.0
+  auto_route_generator: ^10.5.0
   auto_route: ^11.1.0
   flutter_web_auth_2:
     git:
